NIO2 Migration : Fix the code involved in the scan flow
 - Fix code related to MediaFile#File, to Path
 - Fix MediaScannerService/MediaFileService not to use File in paramater